--- a/index.html
+++ b/index.html
@@ -92,7 +92,55 @@
             color: rgb(131, 35, 35);
             font-size: 40px;
         }
-            
+        .box8::before{
+            content: "The before content";
+            color: blue;
+        }
+        .box8::after{
+            content: "The after content";
+            color: red;
+        }
+        .box9{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+        }
+        .box10{
+            margin-top: 20px;
+            height: 400px;
+            border: 2px solid black;
+            position: relative;
+        }
+        .box11{
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 30px;
+        }
+        .box11,
+        .box12 {
+
+        }
+        .box12 {
+            background-color: yellow;
+            width: 300px;
+            height: 25px;
+            z-index: -1;
+        }
+        .box10::before{
+            background-image: url(https://images.unsplash.com/photo-1517800497904-3253a0f38be5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            content:"";
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -2;
+            opacity: 0.75;
+        }
     </style>
 </head>
 
@@ -130,5 +178,19 @@
         <li>4th Child</li>
         <li>5th Child</li>
     </ul>
+
+    <div class="box8"> Lorem ipsum dolor sit amet consectetur.
+    </div>
+
+    <div class="box9">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque?
+    </div>
+    
+    <div class="box10">
+        <div class="box11">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, ullam.
+        </div>
+        <div class="box12">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+    </div>
 </body>
 </html>
