--- a/index.html
+++ b/index.html
@@ -4,193 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        .box {
-            width: 100px;
-            height: 100px;
-            display: block;
-        }
-        .box1 {
-            background-color: red;
-            display: inline-block;
-        }
-        .box2 {
-            background-color: green;
-            display: inline-block;
-        }
-        .box3 {
-            background-color: blue;
-        }
-        .box4 {
-            background-color: orange;
-            display: none;
-        }
-        .box5 {
-            background-color: yellow;
-            display: inline;
-        }
-        .box6 {
-            background-color: aliceblue;
-            padding: 10px 5px 15px 20px;
-            border: 1px solid black;
-            border-width: 1px 2px 3px 4px;
-            border-style: solid dashed double groove;
-
-            border-top: 1px solid black;
-            border-right: 2px dashed red;
-            border-bottom: 3px double green;
-            border-left: 4px groove blue;
-
-            margin: 20px 15px 10px 5px;
-        }
-        .navigation {
-            margin: 0;
-            padding: 0;
-            list-style-type: none;
-        }
-        .navigation li {
-            display: inline-block;
-        }
-        .navigation li a {
-            color:blueviolet;
-            text-decoration: none;
-            font-size: 18px;
-        }
-        /* pseudo-class*/
-        .navigation li a:hover {
-            text-decoration: underline;
-            color: red;
-        }
-        .navigation li a:visited {
-            color: gray;
-
-        }
-        .box7 {
-            border: 1px solid black;
-            padding: 20px;
-        }
-        .box7:hover p {
-            color: white;
-        }
-        .parent li:first-child {
-            color: deeppink;
-            font-size: 24px;
-        }
-        .parent li:nth-child(3){
-            color: blue;
-            font-size: 30px;
-        }
-        .parent li:last-child {
-            color: rgb(141, 105, 124);
-            font-size: 36px;     
-        }
-        .parent li:nth-child(even){
-            color: rgb(131, 35, 35);
-            font-size: 40px;
-        }
-        .box8::before{
-            content: "The before content";
-            color: blue;
-        }
-        .box8::after{
-            content: "The after content";
-            color: red;
-        }
-        .box9{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-        }
-        .box10{
-            margin-top: 20px;
-            height: 400px;
-            border: 2px solid black;
-            position: relative;
-        }
-        .box11{
-            position: absolute;
-            top: 0;
-            right: 0;
-            padding: 30px;
-        }
-        .box11,
-        .box12 {
-
-        }
-        .box12 {
-            background-color: yellow;
-            width: 300px;
-            height: 25px;
-            z-index: -1;
-        }
-        .box10::before{
-            background-image: url(https://images.unsplash.com/photo-1517800497904-3253a0f38be5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            content:"";
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -2;
-            opacity: 0.75;
-        }
-    </style>
+    <title>E-Calculator</title>
+    <link rel="stylesheet" href="./styles.css/styles.css">
 </head>
-
 <body>
-    <h1>CSS Display Properties</h1>
-    <div class="box box1"></div>
-    <div class="box box2"></div>
-    <div class="box box3"></div>
-    <div class="box box4"></div>
-    <div class="box box5">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</div>
-    <div class="box6">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-
-    <ul class="navigation">
-        <li>
-            <a href="#">Home</a>
-        </li>
-        <li>
-            <a href="#">Abot Us</a>
-        </li>
-        <li>
-            <a href="#">Contact Us</a>
-        </li>
-    </ul>
-    
-    <div class="box7">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing.
-        </p>
-    </div>
-
-    <ul class="parent">
-        <li>1st Child</li>
-        <li>2nd Child</li>
-        <li>3rd Child</li>
-        <li>4th Child</li>
-        <li>5th Child</li>
-    </ul>
-
-    <div class="box8"> Lorem ipsum dolor sit amet consectetur.
-    </div>
-
-    <div class="box9">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque?
-    </div>
-    
-    <div class="box10">
-        <div class="box11">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, ullam.
+    <section>
+        <div class="container">
+          <div class="calculator">
+            <div class="display">
+              <div class="display-1">0</div>
+              <div class="display-2">0</div>
+              <div class="temp-result"></div>
+            </div>
+            <div class="all_button">
+              <div class="button all-clear">C</div>
+              <div class="button last-entity-clear">CE</div>
+              <div class="button number dot">.</div>
+              <div class="button operation">/</div>
+              <div class="button number">7</div>
+              <div class="button number">8</div>
+              <div class="button number">9</div>
+              <div class="button operation">x</div>
+              <div class="button number">4</div>
+              <div class="button number">5</div>
+              <div class="button number">6</div>
+              <div class="button operation">-</div>
+              <div class="button number">1</div>
+              <div class="button number">2</div>
+              <div class="button number">3</div>
+              <div class="button operation">+</div>
+              <div class="button btn-0 number">0</div>
+              <div class="button equal">=</div>           
+            </div>
+          </div>
         </div>
-        <div class="box12">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-    </div>
+      </section>
+      <script src="./script.js"></script>
 </body>
 </html>
